--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 #hero {
     width: 100%;
-    height: 1000px;
+    height: 850px;
     background-color: #5F93C0;
     padding-top: 20px;
 }
@@ -90,32 +90,93 @@ header {
     margin-top: -10px;
 }
 
+#whitescheduling {
+    max-width: 100px;
+    display: flex;
+    padding: 12px 23.56px 12px 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 12px;
+    background: #FFF;
+    justify-content: center;
+    margin: 30px auto 0;
+    margin-bottom: 12px;
+}
 
-    @media (max-width: 768px) {
+#content {
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 19.2px;
+    margin-bottom: 64px;
+}
 
-        header {
-            flex-direction: column;
-            height: auto;
-            padding: 10px;
-        }
+.img {
+    height: 224.23px;
+    flex-shrink: 0;
+    align-self: stretch;
+}
 
-        #buttonside {
-            width: 100%;
-            justify-content: space-evenly;
-        }
+.photos {
+    display: grid;
+    justify-content: center;
+    grid-auto-flow: column;
+    gap: 38px;
+    min-width: 100px;
+}
+
+#film {
+    display: flex;
+    align-items: center;
+}
+
+#playbutton {
+    display: flex;
+    padding-right: 8px;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 25px;
+}
+
+#film {
+    color: #FFF;
+    text-align: center;
+    font-family: "Avenir Next";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18.4px;
+    /* 115% */
+}
+
+@media (max-width: 768px) {
+
+    header {
+        flex-direction: column;
+        height: auto;
+        padding: 10px;
     }
 
-    @media (max-width: 480px) {
-        /* #hero {
+    #buttonside {
+        width: 100%;
+        justify-content: space-evenly;
+    }
+}
+
+@media (max-width: 480px) {
+    /* #hero {
         height: 300px;
     } */
 
-        header {
-            padding: 5px;
-        }
-
-        #buttonside {
-            flex-direction: column;
-            gap: 10px;
-        }
+    header {
+        padding: 5px;
     }
+
+    #buttonside {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
