--- a/style.css
+++ b/style.css
@@ -12,15 +12,16 @@ body {
 
 #hero {
     width: 100%;
-    height: 850px;
+    min-height: clamp(700px, 60vh, 1000px);
     background-color: #5F93C0;
-    padding-top: 20px;
+    padding-top: clamp(20px, 3vw, 60px);
 }
 
 header {
     /* width: 100%; */
     display: flex;
-    height: 80px;
+    flex-direction: column;
+    min-height: 80px;
     display: flex;
     padding: 18.63px 19.99px 18.37px 40px;
     justify-content: space-between;
@@ -34,9 +35,9 @@ header {
 
 #buttonside {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 10px;
 }
 
 #scheduling {
@@ -122,10 +123,11 @@ header {
 
 .photos {
     display: grid;
-    justify-content: center;
+    justify-content: space-between;
     grid-auto-flow: column;
-    gap: 38px;
+    gap: 15px;
     min-width: 100px;
+    overflow: hidden;
 }
 
 #film {
@@ -152,7 +154,251 @@ header {
     /* 115% */
 }
 
-@media (max-width: 768px) {
+
+
+#lastsection {
+    padding: 40px 40px 40px 40px;
+}
+
+#footersection {
+    display: flex;
+    max-width: 100%;
+    padding: 40px;
+    justify-content: space-between;
+    align-items: flex-start;
+    background: #FFF;
+}
+
+/* .container {
+    display: flex;
+    padding-right: 360px;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex: 1 0 0;
+    align-self: stretch;
+} */
+ .container {
+    max-width: 1360px;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: 1fr;   /* mobile */
+    gap: 32px;
+}
+
+
+/* .frontsidefooter-content {
+    display: flex;
+    max-width: 100%;
+    padding-right: 0.02px;
+    justify-content: space-between;
+    align-items: flex-start;
+} */
+.frontsidefooter-content {
+    display: grid;
+    grid-template-columns: 1fr;   /* mobile */
+    gap: 32px;
+}
+
+.quicklinks {
+    display: flex;
+    padding-bottom: 15px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30.99px;
+}
+
+.linkheading {
+    display: flex;
+    padding-right: 88.82px;
+    justify-content: space-between;
+    align-items: center;
+    background: #FFF;
+}
+
+.linkitems {
+    display: flex;
+    padding-right: 5.23px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 14px;
+    align-self: stretch;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.linkitems li {
+    white-space: nowrap;
+}
+
+.link {
+    color: #0E0E0E;
+    font-family: "Avenir Next";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+h3 {
+    max-height: 25.6px;
+    color: #0E0E0E;
+    font-family: "Avenir Next";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 25.6px;
+    /* 160% */
+}
+
+.quicklinks2 {
+    display: flex;
+    padding-bottom: 15px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 31px;
+}
+
+.linkheading2 {
+    /* width: 175.59px;
+    height: 25.59px; */
+    background: #FFF;
+}
+
+.linkitems2 {
+    display: flex;
+    padding-right: 7.59px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 14px;
+    align-self: stretch;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.link2 {
+    color: #0E0E0E;
+    font-family: "Avenir Next";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.follow {
+    display: flex;
+    padding-bottom: 123px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30.99px;
+}
+
+#followheading {
+    display: flex;
+    padding-right: 26.48px;
+    justify-content: space-between;
+    align-items: center;
+    background: #FFF;
+}
+
+.followitems {
+    display: flex;
+    padding-right: 3.09px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 14px;
+    align-self: stretch;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.followlinks {
+    color: #0E0E0E;
+    font-family: "Avenir Next";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.stayintouch {
+    display: flex;
+    padding-bottom: 195px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30.99px;
+}
+
+#contactheading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #FFF;
+}
+
+.contactitems {
+    display: flex;
+    padding-right: 20.17px;
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: stretch;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.contactlinks {
+    color: #0E0E0E;
+    font-family: "Avenir Next";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#langlogo {
+    display: flex;
+    width: 90px;
+    height: 28px;
+    padding: 13px 25px 12.6px 25px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    border: 1px solid #767676;
+    background: #283849;
+    
+}
+
+.footer-logo {
+    width: 168px;
+    height: 31px;
+    flex-shrink: 0;
+}
+
+#languagefooter {
+    color: #FFF;
+    font-family: "Avenir Next";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18.4px;
+    padding-right: 28px;
+    /* 115% */
+}
+
+
+.frontsidefooter-lang {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 194.59px;
+}
+
+/* @media (max-width: 768px) {
 
     header {
         flex-direction: column;
@@ -167,9 +413,6 @@ header {
 }
 
 @media (max-width: 480px) {
-    /* #hero {
-        height: 300px;
-    } */
 
     header {
         padding: 5px;
@@ -178,5 +421,32 @@ header {
     #buttonside {
         flex-direction: column;
         gap: 10px;
+    }
+} */
+
+@media (min-width: 768px) {
+    header {
+        flex-direction: row;
+        padding: 18px 40px;
+    }
+
+    #buttonside {
+        flex-direction: row;
+        gap: 30px;
+    }
+
+    .container {
+        grid-template-columns: 1fr 2fr;
+    }
+}
+
+
+@media (min-width: 1024px) {
+    .container {
+        grid-template-columns: 1.2fr 3fr;
+    }
+
+    .frontsidefooter-content {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
